🔄 Trigger Railway redeploy for debug logging

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <title>LexyBooster - Language Learning & SRS</title>
     <meta name="description" content="Master languages with spaced repetition, gamification & streak tracking. Learn German, Spanish, French, and more!">
     <!-- Version: v5.4.23 -->
-    <!-- CommitHash: e90609a -->
-    <!-- Commit: 🐛 FIX: Quiz not getting correct word count due to lessonSize naming mismatch -->
+    <!-- CommitHash: 920548f -->
+    <!-- Commit: 📝 UPDATE: Version to v5.4.24, add commit hash/message to HTML -->
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-72x72.png">
