--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <title>LexyBooster - Language Learning & SRS</title>
     <meta name="description" content="Master languages with spaced repetition, gamification & streak tracking. Learn German, Spanish, French, and more!">
     <!-- Version: v5.4.29 -->
-    <!-- CommitHash: dbfe313 -->
-    <!-- Commit: 🌐 FIX: Load interface language from user_settings on login -->
+    <!-- CommitHash: 3a33cc1 -->
+    <!-- Commit: 🐛 FIX: Word-building buttons cut off on mobile quiz -->
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-72x72.png">
